--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@types/react": "^17.0.16",
     "@types/react-dom": "^17.0.9",
     "react": "^17.0.2",
+    "react-charts": "^2.0.0-beta.7",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-vis": "^1.11.7",
+    "recharts": "^2.0.10",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -39,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-vis": "^1.11.7"
   }
 }
